--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
         },
         // --- НОВЫЕ ДОНАТ КЕЙСЫ ---
         donationCases: {
-            'starter_pack': { id: 'starter_pack', name: 'Набор Новичка', icon: '🚀', price: 10, content: { balance: 500000, items: [{id: 'basic_case', quantity: 5}] } },
-            'tycoon_case': { id: 'tycoon_case', name: 'Кейс Бизнесмена', icon: '🎩', price: 50, content: { balance: 2500000, items: [{id: 'pro_case', quantity: 3}, {id: 'elite_case', quantity: 1}] } },
-            'investor_bundle': { id: 'investor_bundle', name: 'Набор Инвестора', icon: '📈', price: 100, content: { bitcoin: 50, euro: 100, items: [{id: 'ultra_case', quantity: 2}] } }
+            'starter_pack': { id: 'starter_pack', name: 'Набор Новичка', icon: '🚀', price: 10, content: { balance: 500000, items: [{id: 'basic_case', quantity: 5, type: 'case', name: 'Базовый кейс', icon: '📦'}] } },
+            'tycoon_case': { id: 'tycoon_case', name: 'Кейс Бизнесмена', icon: '🎩', price: 50, content: { balance: 2500000, items: [{id: 'pro_case', quantity: 3, type: 'case', name: 'Про-кейс', icon: '💼'}, {id: 'elite_case', quantity: 1, type: 'case', name: 'Элитный кейс', icon: '👑'}] } },
+            'investor_bundle': { id: 'investor_bundle', name: 'Набор Инвестора', icon: '📈', price: 100, content: { bitcoin: 50, euro: 100, items: [{id: 'ultra_case', quantity: 2, type: 'case', name: 'Ультра кейс', icon: '💎'}] } }
         },
         businessesForSale: [
             { id: 12, name: "Китайский ресторан", price: 35000000, profit: 154000 },
@@ -640,6 +640,34 @@
         showView('main');
     }
 
+    async function createDeposit(amount, rate) {
+        const p = gameState.player;
+
+        if (isNaN(amount) || amount <= 0 || isNaN(rate) || rate <= 0 || rate > 20) {
+            addBotMessage("<p>❌ Некорректные данные для вклада. Введите сумму и процент (например, 100000 5).</p>");
+            showView('deposits');
+            return;
+        }
+        if (p.balance < amount) {
+            addBotMessage("<p>❌ Недостаточно средств для открытия вклада.</p>");
+            showView('deposits');
+            return;
+        }
+
+        p.balance -= amount;
+        const payoutTime = Date.now() + (3 * 24 * 60 * 60 * 1000); // 3 дня
+        p.deposits.push({
+            amount: amount,
+            rate: rate,
+            payoutTime: payoutTime,
+            claimed: false,
+            createdAt: Date.now()
+        });
+        addBotMessage(`<p>✅ Вклад на ${formatCurrency(amount)} под ${rate}% открыт! Выплата через 3 дня.</p>`);
+        await savePlayerState(); // Make sure to save the state after modifying it
+        showView('deposits');
+    }
+
     function createDepositPrompt() {
         addBotMessage("<p>💰 Чтобы открыть вклад, введите сумму и процент (например, 100000 5, где 5 - это 5%).<br>Вклад будет закрыт автоматически через 3 дня.</p>");
         renderInput("Сумма Процент...", 'view_deposits');
@@ -659,18 +687,9 @@
                     return;
                 }
 
-                gameState.player.balance -= amount;
-                const payoutTime = Date.now() + (3 * 24 * 60 * 60 * 1000); // 3 дня
-                gameState.player.deposits.push({
-                    amount: amount,
-                    rate: rate,
-                    payoutTime: payoutTime,
-                    claimed: false,
-                    createdAt: Date.now()
-                });
-                addBotMessage(`<p>✅ Вклад на ${formatCurrency(amount)} под ${rate}% открыт! Выплата через 3 дня.</p>`);
-                await savePlayerState();
-                showView('deposits');
+                // Вызываем функцию createDeposit, которая уже содержит логику сохранения
+                await createDeposit(amount, rate);
+                // showView('deposits'); // Эта строка будет вызвана внутри createDeposit
             }};
     }
 
@@ -716,25 +735,145 @@
         showView('item_management'); // Переходим в режим управления предметом, где кнопки будут сгенерированы
     }
 
+    // НОВАЯ ФУНКЦИЯ: addItemToInventory
+    function addItemToInventory(itemToAdd) {
+        const p = gameState.player;
+        const existingItem = p.inventory.find(i => i.id === itemToAdd.id && i.type === itemToAdd.type);
 
-    // --- ТОЧКА ВХОДА В ПРИЛОЖЕНИЕ ---
+        if (existingItem) {
+            existingItem.quantity += itemToAdd.quantity;
+        } else {
+            // Создаем новый объект, чтобы избежать мутации оригинального объекта config
+            p.inventory.push({ ...itemToAdd });
+        }
+    }
+
+    // ФУНКЦИЯ showShop (обязательно нужна, так как вызывается)
+    function showShop() {
+        let msg = '<p><b>🛍️ Магазин:</b></p><hr class="border-gray-600 my-1">';
+        for (const key in config.donationCases) {
+            const item = config.donationCases[key];
+            msg += `<div class="bonus-card p-4 rounded-xl mb-2 relative overflow-hidden">
+                        <div class="relative z-10 flex flex-col items-center">
+                            <span class="text-4xl mb-2">${item.icon}</span>
+                            <p class="text-xl font-bold text-center">${item.name}</p>
+                            <p class="text-gray-300 text-center">${item.price} голосов</p>
+                            <button onclick="window.sendCommand('shop_buy ${item.id}', 'Купить ${item.name}', true)"
+                                    class="mt-3 bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition duration-200 ease-in-out">
+                                Купить
+                            </button>
+                        </div>
+                    </div>`;
+        }
+        addBotMessage(msg, true);
+        showView('shop');
+    }
+
+    // ФУНКЦИЯ initiatePayment (обязательно нужна, так как вызывается)
+    async function initiatePayment(itemId) {
+        const item = config.donationCases[itemId];
+        if (!item) {
+            addBotMessage("<p>❌ Такой товар не найден в магазине.</p>");
+            showView('shop');
+            return;
+        }
+
+        try {
+            const result = await vkBridge.send('VKWebAppOpenPayForm', {
+                app_id: appId,
+                action: 'pay-to-group', // Или 'pay-to-app' если это покупка внутри приложения
+                params: {
+                    amount: item.price,
+                    description: `Покупка: ${item.name}`,
+                    data: JSON.stringify({ item_id: item.id, user_id: userId }) // Дополнительные данные для сервера
+                }
+            });
+
+            if (result.status === 'success') {
+                addBotMessage(`<p>✅ Покупка "${item.name}" успешно совершена! Вы получили:</p>`, true);
+                const p = gameState.player;
+                if (item.content.balance) {
+                    p.balance += item.content.balance;
+                    addBotMessage(`<p>- ${formatCurrency(item.content.balance)}</p>`, true);
+                }
+                if (item.content.bitcoin) {
+                    p.bitcoin += item.content.bitcoin;
+                    addBotMessage(`<p>- ${formatBTC(item.content.bitcoin)}</p>`, true);
+                }
+                if (item.content.euro) {
+                    p.euro += item.content.euro;
+                    addBotMessage(`<p>- ${formatEuro(item.content.euro)}</p>`, true);
+                }
+                if (item.content.items && item.content.items.length > 0) {
+                    item.content.items.forEach(lootItem => {
+                        addItemToInventory(lootItem);
+                        addBotMessage(`<p>- ${lootItem.icon} ${lootItem.name} (${lootItem.quantity} шт.)</p>`, true);
+                    });
+                }
+                await savePlayerState();
+            } else if (result.status === 'cancel') {
+                addBotMessage("<p>ℹ️ Оплата отменена.</p>");
+            } else {
+                addBotMessage("<p>❌ Ошибка при совершении оплаты. Попробуйте еще раз.</p>");
+                console.error("Payment error:", result);
+            }
+        } catch (error) {
+            console.error("Ошибка VKWebAppOpenPayForm:", error);
+            addBotMessage("<p>❌ Не удалось открыть форму оплаты. Пожалуйста, убедитесь, что приложение имеет необходимые разрешения.</p>");
+        }
+        showView('shop'); // Возвращаемся в магазин
+    }
+
+    // НОВАЯ ФУНКЦИЯ: openCase
+    async function openCase(caseId, count = 1) {
+        const p = gameState.player;
+        const playerCase = p.inventory.find(i => i.id === caseId && i.type === 'case');
+
+        if (!playerCase || playerCase.quantity < count) {
+            addBotMessage("<p>❌ У вас недостаточно таких кейсов.</p>");
+            showView('inventory');
+            return;
+        }
+
+        let totalLoot = 0;
+        let message = `<p>🎉 Вы открыли ${count} ${config.cases[caseId].name} и получили:</p>`;
+
+        for (let i = 0; i < count; i++) {
+            const possibleLoot = config.cases[caseId].possibleLoot;
+            const loot = possibleLoot[Math.floor(Math.random() * possibleLoot.length)];
+            totalLoot += loot;
+        }
+
+        p.balance += totalLoot;
+        playerCase.quantity -= count;
+
+        message += `<p>💰 ${formatCurrency(totalLoot)}</p>`;
+        addBotMessage(message, true);
+
+        // Если кейсов больше нет, удаляем их из инвентаря
+        if (playerCase.quantity <= 0) {
+            p.inventory = p.inventory.filter(item => item.id !== caseId || item.type !== 'case');
+        }
+
+        await savePlayerState();
+        showView('inventory');
+    }
+
+    // ТОЧКА ВХОДА В ПРИЛОЖЕНИЕ ---
     async function initApp() {
         try {
             // 1. Инициализация VK Bridge
             await vkBridge.send('VKWebAppInit');
 
             // 2. Инициализация Firebase (используем уже объявленную глобально firebaseConfig)
-            // УДАЛЕНЫ СТРОКИ, КОТОРЫЕ ВЫЗЫВАЛИ ОШИБКУ:
-            // const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
-            // appId = typeof __app_id !== 'undefined' ? __app_id : 123456;
-
             const app = initializeApp(firebaseConfig); // Используем глобальный firebaseConfig
             db = getFirestore(app);
             auth = getAuth(app);
             setLogLevel('error'); // Устанавливаем уровень логирования ошибок для Firebase
 
             // 3. Аутентификация
-            if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
+            // Проверяем, определена ли __initial_auth_token и не является ли она пустой строкой
+            if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token && __initial_auth_token !== '') {
                 await signInWithCustomToken(auth, __initial_auth_token);
             } else {
                 await setPersistence(auth, browserLocalPersistence);
@@ -816,7 +955,7 @@
                 'mining_upgrade_execute': async () => { await upgradeMiningExecute(); }, // savePlayerState уже внутри upgradeMiningExecute
                 'mining_claim': async () => { claimMinedBtc(); await savePlayerState(); }, // savePlayerState уже внутри claimMinedBtc
                 'mining_sell_prompt': sellBtcPrompt,
-                'promo_activate_prompt': activatePromoPrompt,
+                'promo_activate_prompt': activatePromoPrompt, // Предполагается, что activatePromoPrompt будет определена
                 'bank_pension': async () => { claimPension(); await savePlayerState(); },
                 'deposit_create_prompt': createDepositPrompt,
                 'deposit_create_execute': async () => { await createDeposit(parseInt(args[0]), parseAmount(args[1])); }, // savePlayerState уже внутри createDeposit
@@ -870,14 +1009,16 @@
     window.claimPension = claimPension;
     window.claimBonus = claimBonus;
     window.createDepositPrompt = createDepositPrompt;
-    window.createDeposit = createDeposit; // Проверьте, есть ли такая функция. Если нет, это вызовет ошибку.
+    window.createDeposit = createDeposit;
     window.showInventory = showInventory;
     window.showItemManagement = showItemManagement;
     window.openCase = openCase;
     window.showShop = showShop;
     window.initiatePayment = initiatePayment;
-    window.addItemToInventory = addItemToInventory; // Добавлено, так как используется в initiatePayment
+    window.addItemToInventory = addItemToInventory;
 
+    // Инициализируем приложение при загрузке страницы
+    initApp();
 </script>
 </body>
 </html>
